# EC01-Box-motion

./: README.md  moving_box_sim.webm  robot.sdf
ec01_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ec01_ws/install/my_robot/share/ament_index/resource_index/package_run_dependencies/: my_robot
ec01_ws/install/my_robot/share/ament_index/resource_index/parent_prefix_path/: my_robot
ec01_ws/install/my_robot/share/my_robot/: package.sh  package.xml  robot_sim.launch.py
ec01_ws/src/my_robot/launch/: robot_sim.launch.py
