<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vivek@todo.todo">vivek</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
   <depend>ignition-gazebo3</depend> <!-- or ignition-gazebo2 for Ignition Gazebo 2 -->
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
